# libmdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mdk.sln
include/: mdk.h  mdk_config.h  mdk_error.h  mdk_list.h  mdk_string.h  mdk_utils.h
mdk/: main.c  mdk.vcxproj  mdk.vcxproj.filters  mdk_config.h  mdk_error.c  mdk_error.h  mdk_list.c  mdk_list.h  mdk_string.c  mdk_string.h
src/: mdk_error.c  mdk_list.c  mdk_string.c  mdk_utils.c
tests/: tests.c
